fixed homepage route in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http//:garysimons.github.io/girls-on-the-run",
+  "homepage": "http//:GarySimons.github.io/girls-on-the-run",
   "name": "girls-on-the-run",
   "version": "0.1.0",
   "private": true,
